# ChangeLog for media-radio/fldigi
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  16 Aug 2008; Thomas Beierlein (TomJBE) <tb@forth-ev.de>
  xastir-1.9.4.ebuild:
  Missing ebuild changes fixed.

  16 Aug 2008; Thomas Beierlein (TomJBE) <tb@forth-ev.de>
  -xastir-1.9.2.ebuild, -files/xastir-1.9.2-IM.diff,
  -files/xastir-1.9.2-curl.diff, -files/xastir-1.9.2-scripts.diff,
  +xastir-1.9.4.ebuild, +files/xastir-1.9.4-scripts.diff, metadata.xml:
  Version bump and documentation of USE flags wrt GLEP 56

  25 Jul 2008; Thomas Beierlein (TomJBE) <tb@forth-ev.de>
  xastir-1.9.2.ebuild:
  Dropped sys-libs/zlib from DEPEND as it is in 'system'

  14 Jul 2008; Tiago Cunha (tcunha) <me@tiagocunha.org> xastir-1.9.2.ebuild:
  Remove trailing whitespace

  10 Jul 2008; Thomas Beierlein (TomJBE) <tb@forth-ev.de>
  xastir-1.9.2.ebuild:
  dropped explicit RDEPEND  thanks to Tommy[D]

  10 Jul 2008; Thomas Beierlein (TomJBE) <tb@forth-ev.de>
  +xastir-1.9.2.ebuild, +files/xastir-1.9.2-IM.diff,
  +files/xastir-1.9.2-curl.diff, +files/xastir-1.9.2-scripts.diff,
  +metadata.xml:
  Ebuild for bug 231416 (and 109695) thanks to tcunha and chithead

*xastir-1.9.2 (10 Jul 2008)

 