@@ -1,5 +1,5 @@
 AUX xastir-1.9.4-scripts.diff 6814 RMD160 64d8546349948810401b6f0eed7d63daa29d0073 SHA1 ab1174799c7bbed1c77d17b9eab94fa272dce816 SHA256 2d49b9d476364f45132fa118b40340fa976dee30e1dbafe47f07677c85f894c8
 DIST xastir-1.9.4.tar.gz 2348880 RMD160 44019501e7118d274046839b6d302dce57f34e19 SHA1 c29f736991d7866bda7e611f328a7a0a17f5e08e SHA256 b960449bc755e702013cdd62587262bd2be22cbfd5656e4bfe1dd12d62e4c174
 EBUILD xastir-1.9.4.ebuild 1710 RMD160 49246f97ac0252925cc21356438750e6d7b2dbe8 SHA1 f703578fae3263f033f86aaf01f83f5db54c5618 SHA256 7978dd95fd83faead9e36816d77e061bfa2fbe0d0b47ac492b881bf761be8b23
-MISC ChangeLog 1211 RMD160 329602ed4f950989ed5d6bc558a1eaaa56e0e434 SHA1 b4a947f3e9fe4892cc0fb5107700c2c15a2b4e52 SHA256 0905c0b675520b76ab37200ecf4bfa38dac31b66a1eae4407db661dace198ebe
-MISC metadata.xml 672 RMD160 186519b01d7b4bdb356c6add437115f92bd97762 SHA1 d25b05120533865b203ae87a7566cbee2e517015 SHA256 8f58169c54f495a15953661562feff3106744ee05815750679724d206403c2dc
+MISC ChangeLog 1304 RMD160 19f0f3b29fc15ec6de7db4999c8e73757c6268aa SHA1 575439544f32d6d2f399dd9318fc620be3119d40 SHA256 bf75bb3ad9dfd26993b727627cc6060c30df0f4d7d2060e858362d859d51f444
+MISC metadata.xml 553 RMD160 feaafd4b5be9e67c791f07540a4bf4a6aaedf2af SHA1 6f2cb0cb0d0d184c9b3089f2a48b9c5245598b52 SHA256 8b28d5e31c3c8c4a8ee707e08a75278bf48ff51fe2bb034ccf0aee0250a200c7
