@@ -1,11 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-	<herd>no-herd</herd>
-	<maintainer>
-		<email>maintainer-needed@gentoo.org</email>
-		<name>Default assignee for orphaned packages</name>
-	</maintainer>
+	<herd>maintainer-wanted</herd>
 	<use>
 		<flag name='festival'>Enables sound alerts.</flag>
 		<flag name='gdal'>Support for some further map formats.</flag>
