@@ -2,6 +2,9 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  19 Aug 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org> metadata.xml:
+  Fix metadata.xml
+
   16 Aug 2008; Thomas Beierlein (TomJBE) <tb@forth-ev.de>
   xastir-1.9.4.ebuild:
   Missing ebuild changes fixed.
